java/versioned_docs/version-1.22/api/class-locator.mdx
---
id: class-locator
title: "Locator"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

Locators are the central piece of Playwright's auto-waiting and retry-ability. In a nutshell, locators represent a way to find element(s) on the page at any moment. Locator can be created with the [Page.locator(selector[, options])](./api/class-page.mdx#page-locator) method.

[Learn more about locators](../locators.mdx).


- [Locator.allInnerTexts()](./api/class-locator.mdx#locator-all-inner-texts)
- [Locator.allTextContents()](./api/class-locator.mdx#locator-all-text-contents)
- [Locator.boundingBox([options])](./api/class-locator.mdx#locator-bounding-box)
- [Locator.check([options])](./api/class-locator.mdx#locator-check)
- [Locator.click([options])](./api/class-locator.mdx#locator-click)
- [Locator.count()](./api/class-locator.mdx#locator-count)
- [Locator.dblclick([options])](./api/class-locator.mdx#locator-dblclick)
- [Locator.dispatchEvent(type[, eventInit, options])](./api/class-locator.mdx#locator-dispatch-event)
- [Locator.dragTo(target[, options])](./api/class-locator.mdx#locator-drag-to)
- [Locator.elementHandle([options])](./api/class-locator.mdx#locator-element-handle)
- [Locator.elementHandles()](./api/class-locator.mdx#locator-element-handles)
- [Locator.evaluate(expression[, arg, options])](./api/class-locator.mdx#locator-evaluate)
- [Locator.evaluateAll(expression[, arg])](./api/class-locator.mdx#locator-evaluate-all)
- [Locator.evaluateHandle(expression[, arg, options])](./api/class-locator.mdx#locator-evaluate-handle)
- [Locator.fill(value[, options])](./api/class-locator.mdx#locator-fill)
- [Locator.filter([options])](./api/class-locator.mdx#locator-filter)
- [Locator.first()](./api/class-locator.mdx#locator-first)
- [Locator.focus([options])](./api/class-locator.mdx#locator-focus)
- [Locator.frameLocator(selector)](./api/class-locator.mdx#locator-frame-locator)
- [Locator.getAttribute(name[, options])](./api/class-locator.mdx#locator-get-attribute)
- [Locator.highlight()](./api/class-locator.mdx#locator-highlight)
- [Locator.hover([options])](./api/class-locator.mdx#locator-hover)
- [Locator.innerHTML([options])](./api/class-locator.mdx#locator-inner-html)
- [Locator.innerText([options])](./api/class-locator.mdx#locator-inner-text)
- [Locator.inputValue([options])](./api/class-locator.mdx#locator-input-value)
- [Locator.isChecked([options])](./api/class-locator.mdx#locator-is-checked)
- [Locator.isDisabled([options])](./api/class-locator.mdx#locator-is-disabled)
- [Locator.isEditable([options])](./api/class-locator.mdx#locator-is-editable)
- [Locator.isEnabled([options])](./api/class-locator.mdx#locator-is-enabled)
- [Locator.isHidden([options])](./api/class-locator.mdx#locator-is-hidden)
- [Locator.isVisible([options])](./api/class-locator.mdx#locator-is-visible)
- [Locator.last()](./api/class-locator.mdx#locator-last)
- [Locator.locator(selector[, options])](./api/class-locator.mdx#locator-locator)
- [Locator.nth(index)](./api/class-locator.mdx#locator-nth)
- [Locator.page()](./api/class-locator.mdx#locator-page)
- [Locator.press(key[, options])](./api/class-locator.mdx#locator-press)
- [Locator.screenshot([options])](./api/class-locator.mdx#locator-screenshot)
- [Locator.scrollIntoViewIfNeeded([options])](./api/class-locator.mdx#locator-scroll-into-view-if-needed)
- [Locator.selectOption(values[, options])](./api/class-locator.mdx#locator-select-option)
- [Locator.selectText([options])](./api/class-locator.mdx#locator-select-text)
- [Locator.setChecked(checked[, options])](./api/class-locator.mdx#locator-set-checked)
- [Locator.setInputFiles(files[, options])](./api/class-locator.mdx#locator-set-input-files)
- [Locator.tap([options])](./api/class-locator.mdx#locator-tap)
- [Locator.textContent([options])](./api/class-locator.mdx#locator-text-content)
- [Locator.type(text[, options])](./api/class-locator.mdx#locator-type)
- [Locator.uncheck([options])](./api/class-locator.mdx#locator-uncheck)
- [Locator.waitFor([options])](./api/class-locator.mdx#locator-wait-for)

## Locator.allInnerTexts() {#locator-all-inner-texts}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-all-inner-texts-return"/> &#60;[List]<[String]>&#62;<a href="#locator-all-inner-texts-return" class="list-anchor">#</a>

Returns an array of `node.innerText` values for all matching nodes.

## Locator.allTextContents() {#locator-all-text-contents}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-all-text-contents-return"/> &#60;[List]<[String]>&#62;<a href="#locator-all-text-contents-return" class="list-anchor">#</a>

Returns an array of `node.textContent` values for all matching nodes.

## Locator.boundingBox([options]) {#locator-bounding-box}
- `options` &#60;`Locator.BoundingBoxOptions`&#62;
  - `setTimeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-bounding-box-option-timeout"/> &#60;[double]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-bounding-box-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-bounding-box-return"/> &#60;[null]|BoundingBox&#62;<a href="#locator-bounding-box-return" class="list-anchor">#</a>
  - `x` &#60;[double]&#62; the x coordinate of the element in pixels.
  - `y` &#60;[double]&#62; the y coordinate of the element in pixels.
  - `width` &#60;[double]&#62; the width of the element in pixels.
  - `height` &#60;[double]&#62; the height of the element in pixels.

This method returns the bounding box of the element, or `null` if the element is not visible. The bounding box is calculated relative to the main frame viewport - which is usually the same as the browser window.

Scrolling affects the returned bonding box, similarly to [Element.getBoundingClientRect](https://developer.mozilla.org/en-US/docs/Web/API/Element/getBoundingClientRect). That means `x` and/or `y` may be negative.

Elements from child frames return the bounding box relative to the main frame, unlike the [Element.getBoundingClientRect](https://developer.mozilla.org/en-US/docs/Web/API/Element/getBoundingClientRect).

Assuming the page is static, it is safe to use bounding box coordinates to perform input. For example, the following snippet should click the center of the element.

```java
BoundingBox box = element.boundingBox();
page.mouse().click(box.x + box.width / 2, box.y + box.height / 2);
```

## Locator.check([options]) {#locator-check}
- `options` &#60;`Locator.CheckOptions`&#62;
  - `setForce`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-check-option-force"/> &#60;[boolean]&#62; Whether to bypass the [actionability](../actionability.mdx) checks. Defaults to `false`.<a href="#locator-check-option-force" class="list-anchor">#</a>
  - `setNoWaitAfter`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-check-option-no-wait-after"/> &#60;[boolean]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.<a href="#locator-check-option-no-wait-after" class="list-anchor">#</a>
  - `setPosition`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-check-option-position"/> &#60;Position&#62; A point to use relative to the top-left corner of element padding box. If not specified, uses some visible point of the element.<a href="#locator-check-option-position" class="list-anchor">#</a>
    - `setX` &#60;[double]&#62;
    - `setY` &#60;[double]&#62;
  - `setTimeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-check-option-timeout"/> &#60;[double]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-check-option-timeout" class="list-anchor">#</a>
  - `setTrial`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-check-option-trial"/> &#60;[boolean]&#62; When set, this method only performs the [actionability](../actionability.mdx) checks and skips the action. Defaults to `false`. Useful to wait until the element is ready for the action without performing it.<a href="#locator-check-option-trial" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-check-return"/> &#60;[void]&#62;<a href="#locator-check-return" class="list-anchor">#</a>

This method checks the element by performing the following steps:
1. Ensure that element is a checkbox or a radio input. If not, this method throws. If the element is already checked, this method returns immediately.
1. Wait for [actionability](../actionability.mdx) checks on the element, unless `force` option is set.
1. Scroll the element into view if needed.
1. Use [Page.mouse()](./api/class-page.mdx#page-mouse) to click in the center of the element.
1. Wait for initiated navigations to either succeed or fail, unless `noWaitAfter` option is set.
1. Ensure that the element is now checked. If not, this method throws.

If the element is detached from the DOM at any moment during the action, this method throws.

When all steps combined have not finished during the specified `timeout`, this method throws a [TimeoutError]. Passing zero timeout disables this.

## Locator.click([options]) {#locator-click}
- `options` &#60;`Locator.ClickOptions`&#62;
  - `setButton`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-click-option-button"/> &#60;`enum MouseButton { LEFT, RIGHT, MIDDLE }`&#62; Defaults to `left`.<a href="#locator-click-option-button" class="list-anchor">#</a>
  - `setClickCount`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-click-option-click-count"/> &#60;[int]&#62; defaults to 1. See [UIEvent.detail].<a href="#locator-click-option-click-count" class="list-anchor">#</a>
  - `setDelay`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-click-option-delay"/> &#60;[double]&#62; Time to wait between `mousedown` and `mouseup` in milliseconds. Defaults to 0.<a href="#locator-click-option-delay" class="list-anchor">#</a>
  - `setForce`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-click-option-force"/> &#60;[boolean]&#62; Whether to bypass the [actionability](../actionability.mdx) checks. Defaults to `false`.<a href="#locator-click-option-force" class="list-anchor">#</a>
  - `setModifiers`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-click-option-modifiers"/> &#60;[List]<`enum KeyboardModifier { ALT, CONTROL, META, SHIFT }`>&#62; Modifier keys to press. Ensures that only these modifiers are pressed during the operation, and then restores current modifiers back. If not specified, currently pressed modifiers are used.<a href="#locator-click-option-modifiers" class="list-anchor">#</a>
  - `setNoWaitAfter`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-click-option-no-wait-after"/> &#60;[boolean]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.<a href="#locator-click-option-no-wait-after" class="list-anchor">#</a>
  - `setPosition`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-click-option-position"/> &#60;Position&#62; A point to use relative to the top-left corner of element padding box. If not specified, uses some visible point of the element.<a href="#locator-click-option-position" class="list-anchor">#</a>
    - `setX` &#60;[double]&#62;
    - `setY` &#60;[double]&#62;
  - `setTimeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-click-option-timeout"/> &#60;[double]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-click-option-timeout" class="list-anchor">#</a>
  - `setTrial`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-click-option-trial"/> &#60;[boolean]&#62; When set, this method only performs the [actionability](../actionability.mdx) checks and skips the action. Defaults to `false`. Useful to wait until the element is ready for the action without performing it.<a href="#locator-click-option-trial" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-click-return"/> &#60;[void]&#62;<a href="#locator-click-return" class="list-anchor">#</a>

This method clicks the element by performing the following steps:
1. Wait for [actionability](../actionability.mdx) checks on the element, unless `force` option is set.
1. Scroll the element into view if needed.
1. Use [Page.mouse()](./api/class-page.mdx#page-mouse) to click in the center of the element, or the specified `position`.
1. Wait for initiated navigations to either succeed or fail, unless `noWaitAfter` option is set.

If the element is detached from the DOM at any moment during the action, this method throws.

When all steps combined have not finished during the specified `timeout`, this method throws a [TimeoutError]. Passing zero timeout disables this.

## Locator.count() {#locator-count}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-count-return"/> &#60;[int]&#62;<a href="#locator-count-return" class="list-anchor">#</a>

Returns the number of elements matching given selector.

## Locator.dblclick([options]) {#locator-dblclick}
- `options` &#60;`Locator.DblclickOptions`&#62;
  - `setButton`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-dblclick-option-button"/> &#60;`enum MouseButton { LEFT, RIGHT, MIDDLE }`&#62; Defaults to `left`.<a href="#locator-dblclick-option-button" class="list-anchor">#</a>
  - `setDelay`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-dblclick-option-delay"/> &#60;[double]&#62; Time to wait between `mousedown` and `mouseup` in milliseconds. Defaults to 0.<a href="#locator-dblclick-option-delay" class="list-anchor">#</a>
  - `setForce`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-dblclick-option-force"/> &#60;[boolean]&#62; Whether to bypass the [actionability](../actionability.mdx) checks. Defaults to `false`.<a href="#locator-dblclick-option-force" class="list-anchor">#</a>
  - `setModifiers`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-dblclick-option-modifiers"/> &#60;[List]<`enum KeyboardModifier { ALT, CONTROL, META, SHIFT }`>&#62; Modifier keys to press. Ensures that only these modifiers are pressed during the operation, and then restores current modifiers back. If not specified, currently pressed modifiers are used.<a href="#locator-dblclick-option-modifiers" class="list-anchor">#</a>
  - `setNoWaitAfter`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-dblclick-option-no-wait-after"/> &#60;[boolean]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.<a href="#locator-dblclick-option-no-wait-after" class="list-anchor">#</a>
  - `setPosition`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-dblclick-option-position"/> &#60;Position&#62; A point to use relative to the top-left corner of element padding box. If not specified, uses some visible point of the element.<a href="#locator-dblclick-option-position" class="list-anchor">#</a>
    - `setX` &#60;[double]&#62;
    - `setY` &#60;[double]&#62;
  - `setTimeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-dblclick-option-timeout"/> &#60;[double]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-dblclick-option-timeout" class="list-anchor">#</a>
  - `setTrial`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-dblclick-option-trial"/> &#60;[boolean]&#62; When set, this method only performs the [actionability](../actionability.mdx) checks and skips the action. Defaults to `false`. Useful to wait until the element is ready for the action without performing it.<a href="#locator-dblclick-option-trial" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-dblclick-return"/> &#60;[void]&#62;<a href="#locator-dblclick-return" class="list-anchor">#</a>

This method double clicks the element by performing the following steps:
1. Wait for [actionability](../actionability.mdx) checks on the element, unless `force` option is set.
1. Scroll the element into view if needed.
1. Use [Page.mouse()](./api/class-page.mdx#page-mouse) to double click in the center of the element, or the specified `position`.
1. Wait for initiated navigations to either succeed or fail, unless `noWaitAfter` option is set. Note that if the first click of the `dblclick()` triggers a navigation event, this method will throw.

If the element is detached from the DOM at any moment during the action, this method throws.

When all steps combined have not finished during the specified `timeout`, this method throws a [TimeoutError]. Passing zero timeout disables this.

:::note
`element.dblclick()` dispatches two `click` events and a single `dblclick` event.
:::

## Locator.dispatchEvent(type[, eventInit, options]) {#locator-dispatch-event}
- `type`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-dispatch-event-option-type"/> &#60;[String]&#62; DOM event type: `"click"`, `"dragstart"`, etc.<a href="#locator-dispatch-event-option-type" class="list-anchor">#</a>
- `eventInit`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-dispatch-event-option-event-init"/> &#60;[EvaluationArgument]&#62; Optional event-specific initialization properties.<a href="#locator-dispatch-event-option-event-init" class="list-anchor">#</a>
- `options` &#60;`Locator.DispatchEventOptions`&#62;
  - `setTimeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-dispatch-event-option-timeout"/> &#60;[double]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-dispatch-event-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-dispatch-event-return"/> &#60;[void]&#62;<a href="#locator-dispatch-event-return" class="list-anchor">#</a>

The snippet below dispatches the `click` event on the element. Regardless of the visibility state of the element, `click` is dispatched. This is equivalent to calling [element.click()](https://developer.mozilla.org/en-US/docs/Web/API/HTMLElement/click).

```java
element.dispatchEvent("click");
```

Under the hood, it creates an instance of an event based on the given `type`, initializes it with `eventInit` properties and dispatches it on the element. Events are `composed`, `cancelable` and bubble by default.

Since `eventInit` is event-specific, please refer to the events documentation for the lists of initial properties:
* [DragEvent](https://developer.mozilla.org/en-US/docs/Web/API/DragEvent/DragEvent)
* [FocusEvent](https://developer.mozilla.org/en-US/docs/Web/API/FocusEvent/FocusEvent)
* [KeyboardEvent](https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent/KeyboardEvent)
* [MouseEvent](https://developer.mozilla.org/en-US/docs/Web/API/MouseEvent/MouseEvent)
* [PointerEvent](https://developer.mozilla.org/en-US/docs/Web/API/PointerEvent/PointerEvent)
* [TouchEvent](https://developer.mozilla.org/en-US/docs/Web/API/TouchEvent/TouchEvent)
* [Event](https://developer.mozilla.org/en-US/docs/Web/API/Event/Event)

You can also specify `JSHandle` as the property value if you want live objects to be passed into the event:

```java
// Note you can only create DataTransfer in Chromium and Firefox
JSHandle dataTransfer = page.evaluateHandle("() => new DataTransfer()");
Map<String, Object> arg = new HashMap<>();
arg.put("dataTransfer", dataTransfer);
element.dispatchEvent("dragstart", arg);
```

## Locator.dragTo(target[, options]) {#locator-drag-to}
- `target`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-drag-to-option-target"/> &#60;[Locator]&#62; Locator of the element to drag to.<a href="#locator-drag-to-option-target" class="list-anchor">#</a>
- `options` &#60;`Locator.DragToOptions`&#62;
  - `setForce`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-drag-to-option-force"/> &#60;[boolean]&#62; Whether to bypass the [actionability](../actionability.mdx) checks. Defaults to `false`.<a href="#locator-drag-to-option-force" class="list-anchor">#</a>
  - `setNoWaitAfter`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-drag-to-option-no-wait-after"/> &#60;[boolean]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.<a href="#locator-drag-to-option-no-wait-after" class="list-anchor">#</a>
  - `setSourcePosition`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-drag-to-option-source-position"/> &#60;SourcePosition&#62; Clicks on the source element at this point relative to the top-left corner of the element's padding box. If not specified, some visible point of the element is used.<a href="#locator-drag-to-option-source-position" class="list-anchor">#</a>
    - `setX` &#60;[double]&#62;
    - `setY` &#60;[double]&#62;
  - `setTargetPosition`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-drag-to-option-target-position"/> &#60;TargetPosition&#62; Drops on the target element at this point relative to the top-left corner of the element's padding box. If not specified, some visible point of the element is used.<a href="#locator-drag-to-option-target-position" class="list-anchor">#</a>
    - `setX` &#60;[double]&#62;
    - `setY` &#60;[double]&#62;
  - `setTimeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-drag-to-option-timeout"/> &#60;[double]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-drag-to-option-timeout" class="list-anchor">#</a>
  - `setTrial`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-drag-to-option-trial"/> &#60;[boolean]&#62; When set, this method only performs the [actionability](../actionability.mdx) checks and skips the action. Defaults to `false`. Useful to wait until the element is ready for the action without performing it.<a href="#locator-drag-to-option-trial" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-drag-to-return"/> &#60;[void]&#62;<a href="#locator-drag-to-return" class="list-anchor">#</a>

## Locator.elementHandle([options]) {#locator-element-handle}
- `options` &#60;`Locator.ElementHandleOptions`&#62;
  - `setTimeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-element-handle-option-timeout"/> &#60;[double]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-element-handle-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-element-handle-return"/> &#60;[ElementHandle]&#62;<a href="#locator-element-handle-return" class="list-anchor">#</a>

Resolves given locator to the first matching DOM element. If no elements matching the query are visible, waits for them up to a given timeout. If multiple elements match the selector, throws.

## Locator.elementHandles() {#locator-element-handles}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-element-handles-return"/> &#60;[List]<[ElementHandle]>&#62;<a href="#locator-element-handles-return" class="list-anchor">#</a>

Resolves given locator to all matching DOM elements.

## Locator.evaluate(expression[, arg, options]) {#locator-evaluate}
- `expression`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-evaluate-option-expression"/> &#60;[String]&#62; JavaScript expression to be evaluated in the browser context. If it looks like a function declaration, it is interpreted as a function. Otherwise, evaluated as an expression.<a href="#locator-evaluate-option-expression" class="list-anchor">#</a>
- `arg`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-evaluate-option-arg"/> &#60;[EvaluationArgument]&#62; Optional argument to pass to `expression`.<a href="#locator-evaluate-option-arg" class="list-anchor">#</a>
- `options` &#60;`Locator.EvaluateOptions`&#62;
  - `setTimeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-evaluate-option-timeout"/> &#60;[double]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-evaluate-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-evaluate-return"/> &#60;[Object]&#62;<a href="#locator-evaluate-return" class="list-anchor">#</a>

Returns the return value of `expression`.

This method passes this handle as the first argument to `expression`.

If `expression` returns a [Promise], then `handle.evaluate` would wait for the promise to resolve and return its value.

Examples:

```java
Locator tweets = page.locator(".tweet .retweets");
assertEquals("10 retweets", tweets.evaluate("node => node.innerText"));
```

## Locator.evaluateAll(expression[, arg]) {#locator-evaluate-all}
- `expression`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-evaluate-all-option-expression"/> &#60;[String]&#62; JavaScript expression to be evaluated in the browser context. If it looks like a function declaration, it is interpreted as a function. Otherwise, evaluated as an expression.<a href="#locator-evaluate-all-option-expression" class="list-anchor">#</a>
- `arg`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-evaluate-all-option-arg"/> &#60;[EvaluationArgument]&#62; Optional argument to pass to `expression`.<a href="#locator-evaluate-all-option-arg" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-evaluate-all-return"/> &#60;[Object]&#62;<a href="#locator-evaluate-all-return" class="list-anchor">#</a>

The method finds all elements matching the specified locator and passes an array of matched elements as a first argument to `expression`. Returns the result of `expression` invocation.

If `expression` returns a [Promise], then [Locator.evaluateAll(expression[, arg])](./api/class-locator.mdx#locator-evaluate-all) would wait for the promise to resolve and return its value.

Examples:

```java
Locator elements = page.locator("div");
boolean divCounts = (boolean) elements.evaluateAll("(divs, min) => divs.length >= min", 10);
```

## Locator.evaluateHandle(expression[, arg, options]) {#locator-evaluate-handle}
- `expression`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-evaluate-handle-option-expression"/> &#60;[String]&#62; JavaScript expression to be evaluated in the browser context. If it looks like a function declaration, it is interpreted as a function. Otherwise, evaluated as an expression.<a href="#locator-evaluate-handle-option-expression" class="list-anchor">#</a>
- `arg`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-evaluate-handle-option-arg"/> &#60;[EvaluationArgument]&#62; Optional argument to pass to `expression`.<a href="#locator-evaluate-handle-option-arg" class="list-anchor">#</a>
- `options` &#60;`Locator.EvaluateHandleOptions`&#62;
  - `setTimeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-evaluate-handle-option-timeout"/> &#60;[double]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-evaluate-handle-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-evaluate-handle-return"/> &#60;[JSHandle]&#62;<a href="#locator-evaluate-handle-return" class="list-anchor">#</a>

Returns the return value of `expression` as a [JSHandle].

This method passes this handle as the first argument to `expression`.

The only difference between [Locator.evaluate(expression[, arg, options])](./api/class-locator.mdx#locator-evaluate) and [Locator.evaluateHandle(expression[, arg, options])](./api/class-locator.mdx#locator-evaluate-handle) is that [Locator.evaluateHandle(expression[, arg, options])](./api/class-locator.mdx#locator-evaluate-handle) returns [JSHandle].

If the function passed to the [Locator.evaluateHandle(expression[, arg, options])](./api/class-locator.mdx#locator-evaluate-handle) returns a [Promise], then [Locator.evaluateHandle(expression[, arg, options])](./api/class-locator.mdx#locator-evaluate-handle) would wait for the promise to resolve and return its value.

See [Page.evaluateHandle(expression[, arg])](./api/class-page.mdx#page-evaluate-handle) for more details.

## Locator.fill(value[, options]) {#locator-fill}
- `value`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-fill-option-value"/> &#60;[String]&#62; Value to set for the `<input>`, `<textarea>` or `[contenteditable]` element.<a href="#locator-fill-option-value" class="list-anchor">#</a>
- `options` &#60;`Locator.FillOptions`&#62;
  - `setForce`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-fill-option-force"/> &#60;[boolean]&#62; Whether to bypass the [actionability](../actionability.mdx) checks. Defaults to `false`.<a href="#locator-fill-option-force" class="list-anchor">#</a>
  - `setNoWaitAfter`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-fill-option-no-wait-after"/> &#60;[boolean]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.<a href="#locator-fill-option-no-wait-after" class="list-anchor">#</a>
  - `setTimeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-fill-option-timeout"/> &#60;[double]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-fill-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-fill-return"/> &#60;[void]&#62;<a href="#locator-fill-return" class="list-anchor">#</a>

This method waits for [actionability](../actionability.mdx) checks, focuses the element, fills it and triggers an `input` event after filling. Note that you can pass an empty string to clear the input field.

If the target element is not an `<input>`, `<textarea>` or `[contenteditable]` element, this method throws an error. However, if the element is inside the `<label>` element that has an associated [control](https://developer.mozilla.org/en-US/docs/Web/API/HTMLLabelElement/control), the control will be filled instead.

To send fine-grained keyboard events, use [Locator.type(text[, options])](./api/class-locator.mdx#locator-type).

## Locator.filter([options]) {#locator-filter}
- `options` &#60;`Locator.FilterOptions`&#62;
  - `setHas`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-filter-option-has"/> &#60;[Locator]&#62; Matches elements containing an element that matches an inner locator. Inner locator is queried against the outer one. For example, `article` that has `text=Playwright` matches `<article><div>Playwright</div></article>`.<a href="#locator-filter-option-has" class="list-anchor">#</a>

    Note that outer and inner locators must belong to the same frame. Inner locator must not contain [FrameLocator]s.
  - `setHasText`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-filter-option-has-text"/> &#60;[String]|[Pattern]&#62; Matches elements containing specified text somewhere inside, possibly in a child or a descendant element. When passed a [string], matching is case-insensitive and searches for a substring. For example, `"Playwright"` matches `<article><div>Playwright</div></article>`.<a href="#locator-filter-option-has-text" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-filter-return"/> &#60;[Locator]&#62;<a href="#locator-filter-return" class="list-anchor">#</a>

This method narrows existing locator according to the options, for example filters by text.

## Locator.first() {#locator-first}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-first-return"/> &#60;[Locator]&#62;<a href="#locator-first-return" class="list-anchor">#</a>

Returns locator to the first matching element.

## Locator.focus([options]) {#locator-focus}
- `options` &#60;`Locator.FocusOptions`&#62;
  - `setTimeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-focus-option-timeout"/> &#60;[double]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-focus-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-focus-return"/> &#60;[void]&#62;<a href="#locator-focus-return" class="list-anchor">#</a>

Calls [focus](https://developer.mozilla.org/en-US/docs/Web/API/HTMLElement/focus) on the element.

## Locator.frameLocator(selector) {#locator-frame-locator}
- `selector`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-frame-locator-option-selector"/> &#60;[String]&#62; A selector to use when resolving DOM element. See [working with selectors](../selectors.mdx) for more details.<a href="#locator-frame-locator-option-selector" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-frame-locator-return"/> &#60;[FrameLocator]&#62;<a href="#locator-frame-locator-return" class="list-anchor">#</a>

When working with iframes, you can create a frame locator that will enter the iframe and allow selecting elements in that iframe:

```java
Locator locator = page.frameLocator("iframe").locator("text=Submit");
locator.click();
```

## Locator.getAttribute(name[, options]) {#locator-get-attribute}
- `name`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-get-attribute-option-name"/> &#60;[String]&#62; Attribute name to get the value for.<a href="#locator-get-attribute-option-name" class="list-anchor">#</a>
- `options` &#60;`Locator.GetAttributeOptions`&#62;
  - `setTimeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-get-attribute-option-timeout"/> &#60;[double]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-get-attribute-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-get-attribute-return"/> &#60;[null]|[String]&#62;<a href="#locator-get-attribute-return" class="list-anchor">#</a>

Returns element attribute value.

## Locator.highlight() {#locator-highlight}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-highlight-return"/> &#60;[void]&#62;<a href="#locator-highlight-return" class="list-anchor">#</a>

Highlight the corresponding element(s) on the screen. Useful for debugging, don't commit the code that uses [Locator.highlight()](./api/class-locator.mdx#locator-highlight).

## Locator.hover([options]) {#locator-hover}
- `options` &#60;`Locator.HoverOptions`&#62;
  - `setForce`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-hover-option-force"/> &#60;[boolean]&#62; Whether to bypass the [actionability](../actionability.mdx) checks. Defaults to `false`.<a href="#locator-hover-option-force" class="list-anchor">#</a>
  - `setModifiers`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-hover-option-modifiers"/> &#60;[List]<`enum KeyboardModifier { ALT, CONTROL, META, SHIFT }`>&#62; Modifier keys to press. Ensures that only these modifiers are pressed during the operation, and then restores current modifiers back. If not specified, currently pressed modifiers are used.<a href="#locator-hover-option-modifiers" class="list-anchor">#</a>
  - `setPosition`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-hover-option-position"/> &#60;Position&#62; A point to use relative to the top-left corner of element padding box. If not specified, uses some visible point of the element.<a href="#locator-hover-option-position" class="list-anchor">#</a>
    - `setX` &#60;[double]&#62;
    - `setY` &#60;[double]&#62;
  - `setTimeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-hover-option-timeout"/> &#60;[double]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-hover-option-timeout" class="list-anchor">#</a>
  - `setTrial`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-hover-option-trial"/> &#60;[boolean]&#62; When set, this method only performs the [actionability](../actionability.mdx) checks and skips the action. Defaults to `false`. Useful to wait until the element is ready for the action without performing it.<a href="#locator-hover-option-trial" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-hover-return"/> &#60;[void]&#62;<a href="#locator-hover-return" class="list-anchor">#</a>

This method hovers over the element by performing the following steps:
1. Wait for [actionability](../actionability.mdx) checks on the element, unless `force` option is set.
1. Scroll the element into view if needed.
1. Use [Page.mouse()](./api/class-page.mdx#page-mouse) to hover over the center of the element, or the specified `position`.
1. Wait for initiated navigations to either succeed or fail, unless `noWaitAfter` option is set.

If the element is detached from the DOM at any moment during the action, this method throws.

When all steps combined have not finished during the specified `timeout`, this method throws a [TimeoutError]. Passing zero timeout disables this.

## Locator.innerHTML([options]) {#locator-inner-html}
- `options` &#60;`Locator.InnerHTMLOptions`&#62;
  - `setTimeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-inner-html-option-timeout"/> &#60;[double]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-inner-html-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-inner-html-return"/> &#60;[String]&#62;<a href="#locator-inner-html-return" class="list-anchor">#</a>

Returns the `element.innerHTML`.

## Locator.innerText([options]) {#locator-inner-text}
- `options` &#60;`Locator.InnerTextOptions`&#62;
  - `setTimeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-inner-text-option-timeout"/> &#60;[double]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-inner-text-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-inner-text-return"/> &#60;[String]&#62;<a href="#locator-inner-text-return" class="list-anchor">#</a>

Returns the `element.innerText`.

## Locator.inputValue([options]) {#locator-input-value}
- `options` &#60;`Locator.InputValueOptions`&#62;
  - `setTimeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-input-value-option-timeout"/> &#60;[double]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-input-value-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-input-value-return"/> &#60;[String]&#62;<a href="#locator-input-value-return" class="list-anchor">#</a>

Returns `input.value` for the selected `<input>` or `<textarea>` or `<select>` element.

Throws for non-input elements. However, if the element is inside the `<label>` element that has an associated [control](https://developer.mozilla.org/en-US/docs/Web/API/HTMLLabelElement/control), returns the value of the control.

## Locator.isChecked([options]) {#locator-is-checked}
- `options` &#60;`Locator.IsCheckedOptions`&#62;
  - `setTimeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-is-checked-option-timeout"/> &#60;[double]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-is-checked-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-is-checked-return"/> &#60;[boolean]&#62;<a href="#locator-is-checked-return" class="list-anchor">#</a>

Returns whether the element is checked. Throws if the element is not a checkbox or radio input.

## Locator.isDisabled([options]) {#locator-is-disabled}
- `options` &#60;`Locator.IsDisabledOptions`&#62;
  - `setTimeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-is-disabled-option-timeout"/> &#60;[double]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-is-disabled-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-is-disabled-return"/> &#60;[boolean]&#62;<a href="#locator-is-disabled-return" class="list-anchor">#</a>

Returns whether the element is disabled, the opposite of [enabled](../actionability.mdx#enabled).

## Locator.isEditable([options]) {#locator-is-editable}
- `options` &#60;`Locator.IsEditableOptions`&#62;
  - `setTimeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-is-editable-option-timeout"/> &#60;[double]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-is-editable-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-is-editable-return"/> &#60;[boolean]&#62;<a href="#locator-is-editable-return" class="list-anchor">#</a>

Returns whether the element is [editable](../actionability.mdx#editable).

## Locator.isEnabled([options]) {#locator-is-enabled}
- `options` &#60;`Locator.IsEnabledOptions`&#62;
  - `setTimeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-is-enabled-option-timeout"/> &#60;[double]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-is-enabled-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-is-enabled-return"/> &#60;[boolean]&#62;<a href="#locator-is-enabled-return" class="list-anchor">#</a>

Returns whether the element is [enabled](../actionability.mdx#enabled).

## Locator.isHidden([options]) {#locator-is-hidden}
- `options` &#60;`Locator.IsHiddenOptions`&#62;
  - `setTimeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-is-hidden-option-timeout"/> &#60;[double]&#62; **DEPRECATED** This option is ignored. [Locator.isHidden([options])](./api/class-locator.mdx#locator-is-hidden) does not wait for the element to become hidden and returns immediately.<a href="#locator-is-hidden-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-is-hidden-return"/> &#60;[boolean]&#62;<a href="#locator-is-hidden-return" class="list-anchor">#</a>

Returns whether the element is hidden, the opposite of [visible](../actionability.mdx#visible).

## Locator.isVisible([options]) {#locator-is-visible}
- `options` &#60;`Locator.IsVisibleOptions`&#62;
  - `setTimeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-is-visible-option-timeout"/> &#60;[double]&#62; **DEPRECATED** This option is ignored. [Locator.isVisible([options])](./api/class-locator.mdx#locator-is-visible) does not wait for the element to become visible and returns immediately.<a href="#locator-is-visible-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-is-visible-return"/> &#60;[boolean]&#62;<a href="#locator-is-visible-return" class="list-anchor">#</a>

Returns whether the element is [visible](../actionability.mdx#visible).

## Locator.last() {#locator-last}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-last-return"/> &#60;[Locator]&#62;<a href="#locator-last-return" class="list-anchor">#</a>

Returns locator to the last matching element.

## Locator.locator(selector[, options]) {#locator-locator}
- `selector`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-locator-option-selector"/> &#60;[String]&#62; A selector to use when resolving DOM element. See [working with selectors](../selectors.mdx) for more details.<a href="#locator-locator-option-selector" class="list-anchor">#</a>
- `options` &#60;`Locator.LocatorOptions`&#62;
  - `setHas`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-locator-option-has"/> &#60;[Locator]&#62; Matches elements containing an element that matches an inner locator. Inner locator is queried against the outer one. For example, `article` that has `text=Playwright` matches `<article><div>Playwright</div></article>`.<a href="#locator-locator-option-has" class="list-anchor">#</a>

    Note that outer and inner locators must belong to the same frame. Inner locator must not contain [FrameLocator]s.
  - `setHasText`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-locator-option-has-text"/> &#60;[String]|[Pattern]&#62; Matches elements containing specified text somewhere inside, possibly in a child or a descendant element. When passed a [string], matching is case-insensitive and searches for a substring. For example, `"Playwright"` matches `<article><div>Playwright</div></article>`.<a href="#locator-locator-option-has-text" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-locator-return"/> &#60;[Locator]&#62;<a href="#locator-locator-return" class="list-anchor">#</a>

The method finds an element matching the specified selector in the `Locator`'s subtree. It also accepts filter options, similar to [Locator.filter([options])](./api/class-locator.mdx#locator-filter) method.

## Locator.nth(index) {#locator-nth}
- `index`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-nth-option-index"/> &#60;[int]&#62;<a href="#locator-nth-option-index" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-nth-return"/> &#60;[Locator]&#62;<a href="#locator-nth-return" class="list-anchor">#</a>

Returns locator to the n-th matching element. It's zero based, `nth(0)` selects the first element.

## Locator.page() {#locator-page}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-page-return"/> &#60;[Page]&#62;<a href="#locator-page-return" class="list-anchor">#</a>

A page this locator belongs to.

## Locator.press(key[, options]) {#locator-press}
- `key`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-press-option-key"/> &#60;[String]&#62; Name of the key to press or a character to generate, such as `ArrowLeft` or `a`.<a href="#locator-press-option-key" class="list-anchor">#</a>
- `options` &#60;`Locator.PressOptions`&#62;
  - `setDelay`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-press-option-delay"/> &#60;[double]&#62; Time to wait between `keydown` and `keyup` in milliseconds. Defaults to 0.<a href="#locator-press-option-delay" class="list-anchor">#</a>
  - `setNoWaitAfter`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-press-option-no-wait-after"/> &#60;[boolean]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.<a href="#locator-press-option-no-wait-after" class="list-anchor">#</a>
  - `setTimeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-press-option-timeout"/> &#60;[double]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-press-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-press-return"/> &#60;[void]&#62;<a href="#locator-press-return" class="list-anchor">#</a>

Focuses the element, and then uses [Keyboard.down(key)](./api/class-keyboard.mdx#keyboard-down) and [Keyboard.up(key)](./api/class-keyboard.mdx#keyboard-up).

`key` can specify the intended [keyboardEvent.key](https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent/key) value or a single character to generate the text for. A superset of the `key` values can be found [here](https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent/key/Key_Values). Examples of the keys are:

`F1` - `F12`, `Digit0`- `Digit9`, `KeyA`- `KeyZ`, `Backquote`, `Minus`, `Equal`, `Backslash`, `Backspace`, `Tab`, `Delete`, `Escape`, `ArrowDown`, `End`, `Enter`, `Home`, `Insert`, `PageDown`, `PageUp`, `ArrowRight`, `ArrowUp`, etc.

Following modification shortcuts are also supported: `Shift`, `Control`, `Alt`, `Meta`, `ShiftLeft`.

Holding down `Shift` will type the text that corresponds to the `key` in the upper case.

If `key` is a single character, it is case-sensitive, so the values `a` and `A` will generate different respective texts.

Shortcuts such as `key: "Control+o"` or `key: "Control+Shift+T"` are supported as well. When specified with the modifier, modifier is pressed and being held while the subsequent key is being pressed.

## Locator.screenshot([options]) {#locator-screenshot}
- `options` &#60;`Locator.ScreenshotOptions`&#62;
  - `setAnimations`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-screenshot-option-animations"/> &#60;`enum ScreenshotAnimations { DISABLED, ALLOW }`&#62; When set to `"disabled"`, stops CSS animations, CSS transitions and Web Animations. Animations get different treatment depending on their duration:<a href="#locator-screenshot-option-animations" class="list-anchor">#</a>
    * finite animations are fast-forwarded to completion, so they'll fire `transitionend` event.
    * infinite animations are canceled to initial state, and then played over after the screenshot.

    Defaults to `"allow"` that leaves animations untouched.
  - `setCaret`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-screenshot-option-caret"/> &#60;`enum ScreenshotCaret { HIDE, INITIAL }`&#62; When set to `"hide"`, screenshot will hide text caret. When set to `"initial"`, text caret behavior will not be changed.  Defaults to `"hide"`.<a href="#locator-screenshot-option-caret" class="list-anchor">#</a>
  - `setMask`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-screenshot-option-mask"/> &#60;[List]<[Locator]>&#62; Specify locators that should be masked when the screenshot is taken. Masked elements will be overlayed with a pink box `#FF00FF` that completely covers its bounding box.<a href="#locator-screenshot-option-mask" class="list-anchor">#</a>
  - `setOmitBackground`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-screenshot-option-omit-background"/> &#60;[boolean]&#62; Hides default white background and allows capturing screenshots with transparency. Not applicable to `jpeg` images. Defaults to `false`.<a href="#locator-screenshot-option-omit-background" class="list-anchor">#</a>
  - `setPath`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-screenshot-option-path"/> &#60;[Path]&#62; The file path to save the image to. The screenshot type will be inferred from file extension. If `path` is a relative path, then it is resolved relative to the current working directory. If no path is provided, the image won't be saved to the disk.<a href="#locator-screenshot-option-path" class="list-anchor">#</a>
  - `setQuality`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-screenshot-option-quality"/> &#60;[int]&#62; The quality of the image, between 0-100. Not applicable to `png` images.<a href="#locator-screenshot-option-quality" class="list-anchor">#</a>
  - `setScale`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-screenshot-option-scale"/> &#60;`enum ScreenshotScale { CSS, DEVICE }`&#62; When set to `"css"`, screenshot will have a single pixel per each css pixel on the page. For high-dpi devices, this will keep screenshots small. Using `"device"` option will produce a single pixel per each device pixel, so screenhots of high-dpi devices will be twice as large or even larger.<a href="#locator-screenshot-option-scale" class="list-anchor">#</a>

    Defaults to `"device"`.
  - `setTimeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-screenshot-option-timeout"/> &#60;[double]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-screenshot-option-timeout" class="list-anchor">#</a>
  - `setType`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-screenshot-option-type"/> &#60;`enum ScreenshotType { PNG, JPEG }`&#62; Specify screenshot type, defaults to `png`.<a href="#locator-screenshot-option-type" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-screenshot-return"/> &#60;[byte&#91;&#93;]&#62;<a href="#locator-screenshot-return" class="list-anchor">#</a>

This method captures a screenshot of the page, clipped to the size and position of a particular element matching the locator. If the element is covered by other elements, it will not be actually visible on the screenshot. If the element is a scrollable container, only the currently scrolled content will be visible on the screenshot.

This method waits for the [actionability](../actionability.mdx) checks, then scrolls element into view before taking a screenshot. If the element is detached from DOM, the method throws an error.

Returns the buffer with the captured screenshot.

## Locator.scrollIntoViewIfNeeded([options]) {#locator-scroll-into-view-if-needed}
- `options` &#60;`Locator.ScrollIntoViewIfNeededOptions`&#62;
  - `setTimeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-scroll-into-view-if-needed-option-timeout"/> &#60;[double]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-scroll-into-view-if-needed-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-scroll-into-view-if-needed-return"/> &#60;[void]&#62;<a href="#locator-scroll-into-view-if-needed-return" class="list-anchor">#</a>

This method waits for [actionability](../actionability.mdx) checks, then tries to scroll element into view, unless it is completely visible as defined by [IntersectionObserver](https://developer.mozilla.org/en-US/docs/Web/API/Intersection_Observer_API)'s `ratio`.

## Locator.selectOption(values[, options]) {#locator-select-option}
- `values`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-select-option-option-values"/> &#60;[null]|[String]|[ElementHandle]|[String]&#91;&#93;|`SelectOption`|[ElementHandle]&#91;&#93;|`SelectOption`&#91;&#93;&#62; Options to select. If the `<select>` has the `multiple` attribute, all matching options are selected, otherwise only the first option matching one of the passed options is selected. String values are equivalent to `{value:'string'}`. Option is considered matching if all specified properties match.<a href="#locator-select-option-option-values" class="list-anchor">#</a>
  - `setValue` &#60;[String]&#62; Matches by `option.value`. Optional.
  - `setLabel` &#60;[String]&#62; Matches by `option.label`. Optional.
  - `setIndex` &#60;[int]&#62; Matches by the index. Optional.
- `options` &#60;`Locator.SelectOptionOptions`&#62;
  - `setForce`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-select-option-option-force"/> &#60;[boolean]&#62; Whether to bypass the [actionability](../actionability.mdx) checks. Defaults to `false`.<a href="#locator-select-option-option-force" class="list-anchor">#</a>
  - `setNoWaitAfter`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-select-option-option-no-wait-after"/> &#60;[boolean]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.<a href="#locator-select-option-option-no-wait-after" class="list-anchor">#</a>
  - `setTimeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-select-option-option-timeout"/> &#60;[double]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-select-option-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-select-option-return"/> &#60;[List]<[String]>&#62;<a href="#locator-select-option-return" class="list-anchor">#</a>

This method waits for [actionability](../actionability.mdx) checks, waits until all specified options are present in the `<select>` element and selects these options.

If the target element is not a `<select>` element, this method throws an error. However, if the element is inside the `<label>` element that has an associated [control](https://developer.mozilla.org/en-US/docs/Web/API/HTMLLabelElement/control), the control will be used instead.

Returns the array of option values that have been successfully selected.

Triggers a `change` and `input` event once all the provided options have been selected.

```java
// single selection matching the value
element.selectOption("blue");
// single selection matching the label
element.selectOption(new SelectOption().setLabel("Blue"));
// multiple selection
element.selectOption(new String[] {"red", "green", "blue"});
```

## Locator.selectText([options]) {#locator-select-text}
- `options` &#60;`Locator.SelectTextOptions`&#62;
  - `setForce`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-select-text-option-force"/> &#60;[boolean]&#62; Whether to bypass the [actionability](../actionability.mdx) checks. Defaults to `false`.<a href="#locator-select-text-option-force" class="list-anchor">#</a>
  - `setTimeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-select-text-option-timeout"/> &#60;[double]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-select-text-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-select-text-return"/> &#60;[void]&#62;<a href="#locator-select-text-return" class="list-anchor">#</a>

This method waits for [actionability](../actionability.mdx) checks, then focuses the element and selects all its text content.

If the element is inside the `<label>` element that has an associated [control](https://developer.mozilla.org/en-US/docs/Web/API/HTMLLabelElement/control), focuses and selects text in the control instead.

## Locator.setChecked(checked[, options]) {#locator-set-checked}
- `checked`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-set-checked-option-checked"/> &#60;[boolean]&#62; Whether to check or uncheck the checkbox.<a href="#locator-set-checked-option-checked" class="list-anchor">#</a>
- `options` &#60;`Locator.SetCheckedOptions`&#62;
  - `setForce`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-set-checked-option-force"/> &#60;[boolean]&#62; Whether to bypass the [actionability](../actionability.mdx) checks. Defaults to `false`.<a href="#locator-set-checked-option-force" class="list-anchor">#</a>
  - `setNoWaitAfter`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-set-checked-option-no-wait-after"/> &#60;[boolean]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.<a href="#locator-set-checked-option-no-wait-after" class="list-anchor">#</a>
  - `setPosition`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-set-checked-option-position"/> &#60;Position&#62; A point to use relative to the top-left corner of element padding box. If not specified, uses some visible point of the element.<a href="#locator-set-checked-option-position" class="list-anchor">#</a>
    - `setX` &#60;[double]&#62;
    - `setY` &#60;[double]&#62;
  - `setTimeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-set-checked-option-timeout"/> &#60;[double]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-set-checked-option-timeout" class="list-anchor">#</a>
  - `setTrial`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-set-checked-option-trial"/> &#60;[boolean]&#62; When set, this method only performs the [actionability](../actionability.mdx) checks and skips the action. Defaults to `false`. Useful to wait until the element is ready for the action without performing it.<a href="#locator-set-checked-option-trial" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-set-checked-return"/> &#60;[void]&#62;<a href="#locator-set-checked-return" class="list-anchor">#</a>

This method checks or unchecks an element by performing the following steps:
1. Ensure that matched element is a checkbox or a radio input. If not, this method throws.
1. If the element already has the right checked state, this method returns immediately.
1. Wait for [actionability](../actionability.mdx) checks on the matched element, unless `force` option is set. If the element is detached during the checks, the whole action is retried.
1. Scroll the element into view if needed.
1. Use [Page.mouse()](./api/class-page.mdx#page-mouse) to click in the center of the element.
1. Wait for initiated navigations to either succeed or fail, unless `noWaitAfter` option is set.
1. Ensure that the element is now checked or unchecked. If not, this method throws.

When all steps combined have not finished during the specified `timeout`, this method throws a [TimeoutError]. Passing zero timeout disables this.

## Locator.setInputFiles(files[, options]) {#locator-set-input-files}
- `files`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-set-input-files-option-files"/> &#60;[Path]|[Path]&#91;&#93;|`FilePayload`|`FilePayload`&#91;&#93;&#62;<a href="#locator-set-input-files-option-files" class="list-anchor">#</a>
  - `setName` &#60;[String]&#62; File name
  - `setMimeType` &#60;[String]&#62; File type
  - `setBuffer` &#60;[byte&#91;&#93;]&#62; File content
- `options` &#60;`Locator.SetInputFilesOptions`&#62;
  - `setNoWaitAfter`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-set-input-files-option-no-wait-after"/> &#60;[boolean]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.<a href="#locator-set-input-files-option-no-wait-after" class="list-anchor">#</a>
  - `setTimeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-set-input-files-option-timeout"/> &#60;[double]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-set-input-files-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-set-input-files-return"/> &#60;[void]&#62;<a href="#locator-set-input-files-return" class="list-anchor">#</a>

Sets the value of the file input to these file paths or files. If some of the `filePaths` are relative paths, then they are resolved relative to the current working directory. For empty array, clears the selected files.

This method expects [Locator] to point to an [input element](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input). However, if the element is inside the `<label>` element that has an associated [control](https://developer.mozilla.org/en-US/docs/Web/API/HTMLLabelElement/control), targets the control instead.

## Locator.tap([options]) {#locator-tap}
- `options` &#60;`Locator.TapOptions`&#62;
  - `setForce`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-tap-option-force"/> &#60;[boolean]&#62; Whether to bypass the [actionability](../actionability.mdx) checks. Defaults to `false`.<a href="#locator-tap-option-force" class="list-anchor">#</a>
  - `setModifiers`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-tap-option-modifiers"/> &#60;[List]<`enum KeyboardModifier { ALT, CONTROL, META, SHIFT }`>&#62; Modifier keys to press. Ensures that only these modifiers are pressed during the operation, and then restores current modifiers back. If not specified, currently pressed modifiers are used.<a href="#locator-tap-option-modifiers" class="list-anchor">#</a>
  - `setNoWaitAfter`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-tap-option-no-wait-after"/> &#60;[boolean]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.<a href="#locator-tap-option-no-wait-after" class="list-anchor">#</a>
  - `setPosition`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-tap-option-position"/> &#60;Position&#62; A point to use relative to the top-left corner of element padding box. If not specified, uses some visible point of the element.<a href="#locator-tap-option-position" class="list-anchor">#</a>
    - `setX` &#60;[double]&#62;
    - `setY` &#60;[double]&#62;
  - `setTimeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-tap-option-timeout"/> &#60;[double]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-tap-option-timeout" class="list-anchor">#</a>
  - `setTrial`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-tap-option-trial"/> &#60;[boolean]&#62; When set, this method only performs the [actionability](../actionability.mdx) checks and skips the action. Defaults to `false`. Useful to wait until the element is ready for the action without performing it.<a href="#locator-tap-option-trial" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-tap-return"/> &#60;[void]&#62;<a href="#locator-tap-return" class="list-anchor">#</a>

This method taps the element by performing the following steps:
1. Wait for [actionability](../actionability.mdx) checks on the element, unless `force` option is set.
1. Scroll the element into view if needed.
1. Use [Page.touchscreen()](./api/class-page.mdx#page-touchscreen) to tap the center of the element, or the specified `position`.
1. Wait for initiated navigations to either succeed or fail, unless `noWaitAfter` option is set.

If the element is detached from the DOM at any moment during the action, this method throws.

When all steps combined have not finished during the specified `timeout`, this method throws a [TimeoutError]. Passing zero timeout disables this.

:::note
`element.tap()` requires that the `hasTouch` option of the browser context be set to true.
:::

## Locator.textContent([options]) {#locator-text-content}
- `options` &#60;`Locator.TextContentOptions`&#62;
  - `setTimeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-text-content-option-timeout"/> &#60;[double]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-text-content-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-text-content-return"/> &#60;[null]|[String]&#62;<a href="#locator-text-content-return" class="list-anchor">#</a>

Returns the `node.textContent`.

## Locator.type(text[, options]) {#locator-type}
- `text`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-type-option-text"/> &#60;[String]&#62; A text to type into a focused element.<a href="#locator-type-option-text" class="list-anchor">#</a>
- `options` &#60;`Locator.TypeOptions`&#62;
  - `setDelay`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-type-option-delay"/> &#60;[double]&#62; Time to wait between key presses in milliseconds. Defaults to 0.<a href="#locator-type-option-delay" class="list-anchor">#</a>
  - `setNoWaitAfter`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-type-option-no-wait-after"/> &#60;[boolean]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.<a href="#locator-type-option-no-wait-after" class="list-anchor">#</a>
  - `setTimeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-type-option-timeout"/> &#60;[double]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-type-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-type-return"/> &#60;[void]&#62;<a href="#locator-type-return" class="list-anchor">#</a>

Focuses the element, and then sends a `keydown`, `keypress`/`input`, and `keyup` event for each character in the text.

To press a special key, like `Control` or `ArrowDown`, use [Locator.press(key[, options])](./api/class-locator.mdx#locator-press).

```java
element.type("Hello"); // Types instantly
element.type("World", new Locator.TypeOptions().setDelay(100)); // Types slower, like a user
```

An example of typing into a text field and then submitting the form:

```java
Locator element = page.locator("input");
element.type("some text");
element.press("Enter");
```

## Locator.uncheck([options]) {#locator-uncheck}
- `options` &#60;`Locator.UncheckOptions`&#62;
  - `setForce`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-uncheck-option-force"/> &#60;[boolean]&#62; Whether to bypass the [actionability](../actionability.mdx) checks. Defaults to `false`.<a href="#locator-uncheck-option-force" class="list-anchor">#</a>
  - `setNoWaitAfter`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-uncheck-option-no-wait-after"/> &#60;[boolean]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.<a href="#locator-uncheck-option-no-wait-after" class="list-anchor">#</a>
  - `setPosition`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-uncheck-option-position"/> &#60;Position&#62; A point to use relative to the top-left corner of element padding box. If not specified, uses some visible point of the element.<a href="#locator-uncheck-option-position" class="list-anchor">#</a>
    - `setX` &#60;[double]&#62;
    - `setY` &#60;[double]&#62;
  - `setTimeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-uncheck-option-timeout"/> &#60;[double]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-uncheck-option-timeout" class="list-anchor">#</a>
  - `setTrial`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-uncheck-option-trial"/> &#60;[boolean]&#62; When set, this method only performs the [actionability](../actionability.mdx) checks and skips the action. Defaults to `false`. Useful to wait until the element is ready for the action without performing it.<a href="#locator-uncheck-option-trial" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-uncheck-return"/> &#60;[void]&#62;<a href="#locator-uncheck-return" class="list-anchor">#</a>

This method checks the element by performing the following steps:
1. Ensure that element is a checkbox or a radio input. If not, this method throws. If the element is already unchecked, this method returns immediately.
1. Wait for [actionability](../actionability.mdx) checks on the element, unless `force` option is set.
1. Scroll the element into view if needed.
1. Use [Page.mouse()](./api/class-page.mdx#page-mouse) to click in the center of the element.
1. Wait for initiated navigations to either succeed or fail, unless `noWaitAfter` option is set.
1. Ensure that the element is now unchecked. If not, this method throws.

If the element is detached from the DOM at any moment during the action, this method throws.

When all steps combined have not finished during the specified `timeout`, this method throws a [TimeoutError]. Passing zero timeout disables this.

## Locator.waitFor([options]) {#locator-wait-for}
- `options` &#60;`Locator.WaitForOptions`&#62;
  - `setState`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-wait-for-option-state"/> &#60;`enum WaitForSelectorState { ATTACHED, DETACHED, VISIBLE, HIDDEN }`&#62; Defaults to `'visible'`. Can be either:<a href="#locator-wait-for-option-state" class="list-anchor">#</a>
    * `'attached'` - wait for element to be present in DOM.
    * `'detached'` - wait for element to not be present in DOM.
    * `'visible'` - wait for element to have non-empty bounding box and no `visibility:hidden`. Note that element without any content or with `display:none` has an empty bounding box and is not considered visible.
    * `'hidden'` - wait for element to be either detached from DOM, or have an empty bounding box or `visibility:hidden`. This is opposite to the `'visible'` option.
  - `setTimeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-wait-for-option-timeout"/> &#60;[double]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-wait-for-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-wait-for-return"/> &#60;[void]&#62;<a href="#locator-wait-for-return" class="list-anchor">#</a>

Returns when element specified by locator satisfies the `state` option.

If target element already satisfies the condition, the method returns immediately. Otherwise, waits for up to `timeout` milliseconds until the condition is met.

```java
Locator orderSent = page.locator("#order-sent");
orderSent.waitFor();
```


[APIRequest]: ./api/class-apirequest.mdx "APIRequest"
[APIRequestContext]: ./api/class-apirequestcontext.mdx "APIRequestContext"
[APIResponse]: ./api/class-apiresponse.mdx "APIResponse"
[APIResponseAssertions]: ./test-assertions.mdx "APIResponseAssertions"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[FormData]: ./api/class-formdata.mdx "FormData"
[Frame]: ./api/class-frame.mdx "Frame"
[FrameLocator]: ./api/class-framelocator.mdx "FrameLocator"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Locator]: ./api/class-locator.mdx "Locator"
[LocatorAssertions]: ./test-assertions.mdx "LocatorAssertions"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[PageAssertions]: ./test-assertions.mdx "PageAssertions"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[PlaywrightAssertions]: ./test-assertions.mdx "PlaywrightAssertions"
[PlaywrightException]: ./api/class-playwrightexception.mdx "PlaywrightException"
[Request]: ./api/class-request.mdx "Request"
[RequestOptions]: ./api/class-requestoptions.mdx "RequestOptions"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[WebSocketFrame]: ./api/class-websocketframe.mdx "WebSocketFrame"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./evaluating.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[boolean]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "boolean"
[byte&#91;&#93;]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "byte[]"
[Consumer]: https://docs.oracle.com/javase/8/docs/api/java/util/function/Consumer.html "Consumer"
[double]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "double"
[InputStream]: https://docs.oracle.com/javase/8/docs/api/java/io/InputStream.html "InputStream"
[int]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "int"
[List]: https://docs.oracle.com/javase/8/docs/api/java/util/List.html "List"
[Map]: https://docs.oracle.com/javase/8/docs/api/java/util/Map.html "Map"
[null]: https://docs.oracle.com/javase/specs/jls/se8/html/jls-3.html#jls-3.10.7 "null"
[Object]: https://docs.oracle.com/javase/8/docs/api/java/lang/Object.html "Object"
[Path]: https://docs.oracle.com/javase/8/docs/api/java/nio/file/Path.html "Path"
[Pattern]: https://docs.oracle.com/javase/8/docs/api/java/util/regex/Pattern.html "Pattern"
[Predicate]: https://docs.oracle.com/javase/8/docs/api/java/util/function/Predicate.html "Predicate"
[void]: https://docs.oracle.com/javase/tutorial/java/javaOO/methods.html "void"
[Runnable]: https://docs.oracle.com/javase/8/docs/api/java/lang/Runnable.html "Runnable"
[RuntimeException]: https://docs.oracle.com/javase/8/docs/api/java/lang/RuntimeException.html "RuntimeException"
[String]: https://docs.oracle.com/javase/8/docs/api/java/lang/String.html "String"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/java/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright-java "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright-java/blob/master/Dockerfile.focal "Dockerfile.focal"
